cambios en octavito 2

--- a/octavito.html
+++ b/octavito.html
@@ -16,5 +16,6 @@
     <h3>Sabado, 13 de Noviembre</h3>
     <p>Hoy me hare la foto de niñito jesús</p>
     <p>mi mama me esta cantando "viento viento"</p>
+    <p>ochi es muy layavai</p>
 </body>
 </html>
